[gd_scene load_steps=5 format=2]

[ext_resource path="res://ui/m6x11.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://menu/PauseMenu.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=1]
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="DynamicFont" id=2]
size = 32
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_char = 1
font_data = ExtResource( 1 )

[node name="PauseMenu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.196078 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer2" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="CenterContainer2"]
margin_left = 397.0
margin_top = 190.0
margin_right = 627.0
margin_bottom = 410.0
rect_min_size = Vector2( 230, 220 )
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CenterContainer2/Panel"]
anchor_top = -0.06
anchor_right = 1.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 2 )
text = "Game Paused"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer2/Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -75.0
margin_right = 100.0
margin_bottom = 75.0
rect_min_size = Vector2( 200, 30 )
custom_constants/separation = 15
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResumeGame" type="Button" parent="CenterContainer2/Panel/VBoxContainer"]
margin_right = 200.0
margin_bottom = 40.0
rect_min_size = Vector2( 200, 40 )
text = "Resume Game"

[node name="RestartLevel" type="Button" parent="CenterContainer2/Panel/VBoxContainer"]
visible = false
margin_top = 55.0
margin_right = 200.0
margin_bottom = 95.0
rect_min_size = Vector2( 200, 40 )
text = "Restart Level"

[node name="SelectLevel" type="Button" parent="CenterContainer2/Panel/VBoxContainer"]
margin_top = 55.0
margin_right = 200.0
margin_bottom = 95.0
rect_min_size = Vector2( 200, 40 )
text = "Select Level"

[node name="MainMenu" type="Button" parent="CenterContainer2/Panel/VBoxContainer"]
margin_top = 110.0
margin_right = 200.0
margin_bottom = 150.0
rect_min_size = Vector2( 200, 40 )
text = "Back to Main Menu"
[connection signal="pressed" from="CenterContainer2/Panel/VBoxContainer/ResumeGame" to="." method="_on_ResumeGame_pressed"]
[connection signal="pressed" from="CenterContainer2/Panel/VBoxContainer/RestartLevel" to="." method="_on_RestartLevel_pressed"]
[connection signal="pressed" from="CenterContainer2/Panel/VBoxContainer/SelectLevel" to="." method="_on_SelectLevel_pressed"]
[connection signal="pressed" from="CenterContainer2/Panel/VBoxContainer/MainMenu" to="." method="_on_MainMenu_pressed"]
